--- a/index.html
+++ b/index.html
@@ -1,62 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <div class="container">
-      <div class="card">
-        <div class="image" style="--clr: #89ec5b">
-          <img src="./makeup.jpg" />
-        </div>
-        <div class="desc">
-          <h3>MakeUp</h3>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum,
-            reprehenderit dolor natus possimus quam aperiam sint cupiditate sunt
-            dolorum eligendi? Lorem ipsum dolor sit amet consectetur adipisicing
-            elit. Cum, reprehenderit dolor natus possimus quam aperiam sint
-            cupiditate sunt dolorum eligendi?
-          </p>
-          <a href="#">Read More</a>
-        </div>
-      </div>
-      <div class="card" style="--clr: #5b98eb">
-        <div class="image">
-          <img src="./fdye.jpg" />
-        </div>
-        <div class="desc">
-          <h3><center>Hair Style</center></h3>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum,
-            reprehenderit dolor natus possimus quam aperiam sint cupiditate sunt
-            dolorum eligendi?Lorem ipsum dolor sit amet consectetur adipisicing
-            elit. Cum, reprehenderit dolor natus possimus quam aperiam sint
-            cupiditate sunt dolorum eligendi?
-          </p>
-          <a href="#">Read More</a>
-        </div>
-      </div>
-      <div class="card" style="--clr: #eb5ae5">
-        <div class="image">
-          <img src="./hairstyle.jpg" />
-        </div>
-        <div class="desc">
-          <h3>Fashion Dye</h3>
-          <p>
-            <!-- Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum,
-            reprehenderit dolor natus possimus quam aperiam sint cupiditate sunt
-            dolorum eligendi?Lorem ipsum dolor sit amet consectetur adipisicing
-            elit. Cum, reprehenderit dolor natus possimus quam aperiam sint
-            cupiditate sunt dolorum eligendi? -->
-          </p>
-          <a href="#">Read More</a>
-        </div>
-      </div>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+<div class="container">
+    <nav>
+        <img src="IMG-20230321-WA0191.jpg"class="logo">
+        <ul>
+            <li><a href="">About</a></li>
+            <li><a href="">Contact</a></li>
+            <li><a href="">Portfolio</a></li>
+        </ul>
+        <img src="image/cart.jpg" class="cart-icon">
+    </nav>
+    <div class="text-box">
+            <p>I'M</p>
+          <h1>MARYAM</h1>
+          <h3>I HELP COMPANIES MAKE A BEAUTIFUL WEBSITE</h3>
+          <div class="row">
+          <a href="">Explore My Portfolio</a>
+          <a href="">Contact With Me <span>&#x27F6;</span> </a>
+          <span>You Can Explore More About My Portfolio And<br>Personal Life Experiences Here. </span>
+</div>
+    <div class="social-icons">
+        <a href=""><img src="imges/dribble.png" ></a>
+        <a href=""><img src="images/telegram.png"></a>
+        <a href="https://instagram.com/"><img src="images/instagram.png"></a>
     </div>
-  </body>
+</body>
 </html>
