--- a/index.html
+++ b/index.html
@@ -5,32 +5,60 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
-<div class="container">
-    <nav>
-        <img src="IMG-20230321-WA0191.jpg"class="logo">
-        <ul>
-            <li><a href="">About</a></li>
-            <li><a href="">Contact</a></li>
-            <li><a href="">Portfolio</a></li>
-        </ul>
-        <img src="image/cart.jpg" class="cart-icon">
-    </nav>
-    <div class="text-box">
-            <p>I'M</p>
-          <h1>MARYAM</h1>
-          <h3>I HELP COMPANIES MAKE A BEAUTIFUL WEBSITE</h3>
-          <div class="row">
-          <a href="">Explore My Portfolio</a>
-          <a href="">Contact With Me <span>&#x27F6;</span> </a>
-          <span>You Can Explore More About My Portfolio And<br>Personal Life Experiences Here. </span>
-</div>
-    <div class="social-icons">
-        <a href=""><img src="imges/dribble.png" ></a>
-        <a href=""><img src="images/telegram.png"></a>
-        <a href="https://instagram.com/"><img src="images/instagram.png"></a>
-    </div>
+    <footer>
+        <div class="container">
+            <div class="footer-col">
+                <h2>Logo</h2>
+                <p class="footer-para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus ipsam in itaque quidem veniam quo dolorum unde obcaecati accusantium, et laboriosam quis tenetur ea alias rem consectetur aliquid sed illo.</p>
+            </div>
+            <div class="footer-col">
+                <h3 class="text-office">
+                    Office
+                    <div class="underline"><span></span></div>
+                </h3>
+                    <p>Street no.8</p>
+                    <p>Gulshan e Iqbal</p>
+                    <p>Karachi, Sindh, Pakistan</p>
+
+                    <p class="email">abc@gmail.com</p>
+                    <p class="phone">+92 300 123 4567</p>
+            </div>
+            <div class="footer-col">
+                <h3>
+                    Menu
+                    <div class="underline"><span></span></div>
+                </h3>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Contact Us</a></li>
+                    <li><a href="#">Our Team</a></li>
+                    <li><a href="#">Testimonials</a></li>
+                </ul>
+            </div>
+                <div class="footer-col">
+                    <h3>
+                        Newsletter
+                        <div class="underline"><span></span></div>
+                    </h3>
+                    <form action="">
+                        <i class="fa-solid fa-envelope"></i>
+                        <input type="text" placeholder="abc@gmail.com">
+                        <a href=""><i class="fa-solid fa-arrow-right"></i ></a>
+                    </form>
+                    <div class="social-icons">
+                        <a href="#"><i class="fa-brands fa-facebook"></i></a>
+                        <a href="#"><i class="fa-brands fa-youtube"></i></a>
+                        <a href="#"><i class="fa-brands fa-google"></i></a>
+                        <a href="#"><i class="fa-brands fa-whatsapp"></i></a>
+                    </div>
+                </div>
+            </div>
+    </footer>
 </body>
 </html>
