--- a/index.html
+++ b/index.html
@@ -1,159 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BURAQ SALOON</title>
-    <link rel="stylesheet" href="stylesheet.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-   
-</head>
-<body>
-<div class="navbar">
-    <div class="header">
-      <ul class="menu">
-        <li>Home</li>
-        <li>About</li>
-        <li>Blog</li>
-        <li>Projects</li>
-        <li>Contact</li>
-      </ul>
-    </div>
-  </div>
-<div class="slider"><img src="img/pp.jpg" alt="slider image"width="100%" height="600px"></div>
-<!-- ---------------- info ---------- -->
-<div class="info">
-  <h1><strong> GET READY TO GLOW AGAIN! </strong> </h1>
-  <br>
-  <p>Good Looks Reflects Your Story & Your Spirit - <br>  We are ingrained In the beauty & hair Industry for more than two decades.<br> Let our stylists take care of your beauty needs. <br>Our consultation process is where we understand your hair & skin condition,<br> and than formulate the amazing services that gives a a perfect look.</p>
-  </div>
-  <div class="infoimg">
-    <img src="img/WhatsApp Image 2023-03-21 at 10.54.42.jpg" alt="image" width="50%">
-  </div>
-
-  <!-- ----------------Our Services------------- -->
-  <div class="service">
-    <h1><strong><center>Our Services</center></strong></h1>
-
-<!-- ------------for carts ------------------- -->
-<div class="card 1">
-    <div class="imgbox">
-    <img src="img/wp8658370.jpg" alt="">
-    </div>
-
-    <div class="content">
-      <h2>keep Smiling</h2>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat
-        doloribus vitae fugit enim repudiandae
-      </p>
-    </div>
-  </div>
-  <div class="card 2">
-    <div class="imgbox">
-    <img src="img/wp8658370.jpg" alt="">
-    </div>
-
-    <div class="content">
-      <h2>keep Smiling</h2>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat
-        doloribus vitae fugit enim repudiandae
-      </p>
-    </div>
-  </div>
-  <div class="card 3">
-    <div class="imgbox">
-    <img src="img/wp8658370.jpg" alt="">
-    </div>
-
-    <div class="content">
-      <h2>keep Smiling</h2>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat
-        doloribus vitae fugit enim repudiandae
-      </p>
-    </div>
-  </div>
-</div>
-<!-- ----------------hot-deals------------- -->
-<div class="hot-deals">
-  <h1><strong><center>HOT DEALS</center></strong></h1>
-
-
-   <!-- neeeeeeeeeewwww -->
-   <ul class="img-list">
-    <li><img src="img/1.jpg"></li>
-    <li><img src="img/2.jpg"></li>
-    <li><img src="img/3.jpg"></li>
-    <li><img src="img/4.jpg"></li>
-    <li><img src="img/10.jpg"></li>
-    <li><img src="img/6.jpg"></li>
-    <li><img src="img/7.jpg"></li>
-    <li><img src="img/8.jpg"></li>
-    <li><img src="img/9.jpg"></li>
-  </ul>
-</div>
-
-
-
-
-</div>
-<!-- ---------------footer---------------- -->
-<footer>
-  <div class="container">
-      <div class="footer-col">
-          <h2>Logo</h2>
-          <p class="footer-para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus ipsam in itaque quidem veniam quo dolorum unde obcaecati accusantium, et laboriosam quis tenetur ea alias rem consectetur aliquid sed illo.</p>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="container">
+      <div class="card" style="--clr: #a569bd">
+        <div class="image">
+          <img src="./makeover1.jpeg" height="200px" width="200px" />
+        </div>
+        <div class="desc">
+          <h3>MakeOver Style</h3>
+          <p>
+            Our professional makeup artists will give you a makeover according
+            to your style, personality and facial features and help boost your
+            confidence levels. Get a look that uniquely defines you and captures
+            your essence. And look fashionable, confident and polished with a
+            professional makeover .
+          </p>
+          <a href="#">Read More</a>
+        </div>
       </div>
-      <div class="footer-col">
-          <h3 class="text-office">
-              Office
-              <div class="underline"><span></span></div>
-          </h3>
-              <p>Street no.8</p>
-              <p>Gulshan e Iqbal</p>
-              <p>Karachi, Sindh, Pakistan</p>
-
-              <p class="email">abc@gmail.com</p>
-              <p class="phone">+92 300 123 4567</p>
+      <div class="card" style="--clr: #5b98eb">
+        <div class="image">
+          <img src="./hairtreatment2.jpeg" height="200px" width="200px" />
+        </div>
+        <div class="desc">
+          <h3>Hair Treatment</h3>
+          <p>
+            we offer a wide range of treatments for all hair types and
+            conditions and will help you to select a treatment that’s right for
+            you. Within our professional treatments range we offer Power Dose
+            treatments for both dry and coloured hair, to bring those hair
+            fibres back to life and revitalised.
+          </p>
+          <a href="#">Read More</a>
+        </div>
       </div>
-      <div class="footer-col">
-          <h3>
-              Menu
-              <div class="underline"><span></span></div>
-          </h3>
-          <ul>
-              <li><a href="#">Home</a></li>
-              <li><a href="#">About</a></li>
-              <li><a href="#">Contact Us</a></li>
-              <li><a href="#">Our Team</a></li>
-              <li><a href="#">Testimonials</a></li>
-          </ul>
+      <div class="card" style="--clr: #eb5ae5">
+        <div class="image">
+          <img src="./faicial3.jpeg" height="200px" width="200px" />
+        </div>
+        <div class="desc">
+          <h3>Fashion Dye</h3>
+          <p>
+            Hair coloring services are ready for a new hair color look and
+            style. Bring your hair life back with dazzling color. Femingle
+            provides you best Hair dye services . We have all saloon and spa
+            services at your home. our professional Hair Stylist that
+            understands depth and dimension on all type of hairs.
+          </p>
+          <a href="#">Read More</a>
+        </div>
       </div>
-          <div class="footer-col">
-              <h3>
-                  Newsletter
-                  <div class="underline"><span></span></div>
-              </h3>
-              <form action="">
-                  <i class="fa-solid fa-envelope"></i>
-                  <input type="text" placeholder="abc@gmail.com">
-                  <a href=""><i class="fa-solid fa-arrow-right"></i ></a>
-              </form>
-              <div class="social-icons">
-                  <a href="#"><i class="fa-brands fa-facebook"></i></a>
-                  <a href="#"><i class="fa-brands fa-youtube"></i></a>
-                  <a href="#"><i class="fa-brands fa-google"></i></a>
-                  <a href="#"><i class="fa-brands fa-whatsapp"></i></a>
-              </div>
-          </div>
-      </div>
-</footer>
-
-</body>
-
+    </div>
+  </body>
 </html>
- 
- 
