--- a/index.html
+++ b/index.html
@@ -1,62 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <div class="container">
-      <div class="card" style="--clr: #a569bd">
-        <div class="image">
-          <img src="./makeover1.jpeg" height="200px" width="200px" />
-        </div>
-        <div class="desc">
-          <h3>MakeOver Style</h3>
-          <p>
-            Our professional makeup artists will give you a makeover according
-            to your style, personality and facial features and help boost your
-            confidence levels. Get a look that uniquely defines you and captures
-            your essence. And look fashionable, confident and polished with a
-            professional makeover .
-          </p>
-          <a href="#">Read More</a>
-        </div>
-      </div>
-      <div class="card" style="--clr: #5b98eb">
-        <div class="image">
-          <img src="./hairtreatment2.jpeg" height="200px" width="200px" />
-        </div>
-        <div class="desc">
-          <h3>Hair Treatment</h3>
-          <p>
-            we offer a wide range of treatments for all hair types and
-            conditions and will help you to select a treatment that’s right for
-            you. Within our professional treatments range we offer Power Dose
-            treatments for both dry and coloured hair, to bring those hair
-            fibres back to life and revitalised.
-          </p>
-          <a href="#">Read More</a>
-        </div>
-      </div>
-      <div class="card" style="--clr: #eb5ae5">
-        <div class="image">
-          <img src="./faicial3.jpeg" height="200px" width="200px" />
-        </div>
-        <div class="desc">
-          <h3>Fashion Dye</h3>
-          <p>
-            Hair coloring services are ready for a new hair color look and
-            style. Bring your hair life back with dazzling color. Femingle
-            provides you best Hair dye services . We have all saloon and spa
-            services at your home. our professional Hair Stylist that
-            understands depth and dimension on all type of hairs.
-          </p>
-          <a href="#">Read More</a>
-        </div>
-      </div>
-    </div>
-  </body>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="style.css">
+
+</head>
+<body>
+    <footer>
+        <div class="container">
+            <div class="footer-col">
+                <img src="./logo.jpeg" alt="">
+            </div>
+            <div class="footer-col">
+                <h3 class="text-office">
+                    Office
+                    <div class="underline"><span></span></div>
+                </h3>
+                    <p>Street no.8</p>
+                    <p>Gulshan e Iqbal</p>
+                    <p>Karachi, Sindh, Pakistan</p>
+
+                    <p class="email">abc@gmail.com</p>
+                    <p class="phone">+92 300 123 4567</p>
+            </div>
+            <div class="footer-col">
+                <h3>
+                    Menu
+                    <div class="underline"><span></span></div>
+                </h3>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Contact Us</a></li>
+                    <li><a href="#">Our Team</a></li>
+                    <li><a href="#">Testimonials</a></li>
+                </ul>
+            </div>
+                <div class="footer-col">
+                    <h3>
+                        Newsletter
+                        <div class="underline"><span></span></div>
+                    </h3>
+                    <form action="">
+                        <i class="fa-solid fa-envelope"></i>
+                        <input type="text" placeholder="abc@gmail.com">
+                        <a href=""><i class="fa-solid fa-arrow-right"></i ></a>
+                    </form>
+                    <div class="social-icons">
+                        <a href="#"><i class="fa-brands fa-facebook"></i></a>
+                        <a href="#"><i class="fa-brands fa-youtube"></i></a>
+                        <a href="#"><i class="fa-brands fa-google"></i></a>
+                        <a href="#"><i class="fa-brands fa-whatsapp"></i></a>
+                    </div>
+                </div>
+            </div>
+    </footer>
+</body>
 </html>
